2026-01-31T01:55:59Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21536768165 # 863
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-31
* notice: last 14d: unq all: 0 0
* notice: prev accum: outdated-unq outdated-all / unq all: 53 637 / 53 637
* notice: next accum: outdated-unq outdated-all / unq all: 53 637 / 53 637
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [] / []

2026-01-30T02:00:35Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21501690320 # 862
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-30
* notice: last 14d: unq all: 0 0
* notice: prev accum: outdated-unq outdated-all / unq all: 53 637 / 53 637
* notice: next accum: outdated-unq outdated-all / unq all: 53 637 / 53 637
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-01-04 2026-01-05 2026-01-06 2026-01-07 2026-01-08 2026-01-09 2026-01-10 2026-01-11 2026-01-12 2026-01-13 2026-01-14] / []

2026-01-29T01:59:49Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21462719582 # 861
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-29
* notice: last 14d: unq all: 0 0
* notice: prev accum: outdated-unq outdated-all / unq all: 53 637 / 53 637
* notice: next accum: outdated-unq outdated-all / unq all: 53 637 / 53 637
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0